tests/NormalTests/paczka1/fuzzy1/98770286.err
Error in line 2: xf8R4Xhl S845 35,1
Error in line 20: A813 S845 21,9
Error in line 15: vBMJj6m S845 26,9
Error in line 21: A813 A248 90,6
Error in line 17: QDz A441 13,6
